# RL-demo-web

./: .gitignore  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml
backend/: Dockerfile  cnn_plastic.py  main.py  model1.py  model_py.py  pyproject.toml  test.ipynb
backend/app/: main.py  main2.py
backend/app/models/: cnn_plastic.py  comp.py  ddpg_ice.py
backend/app/models/code/: 4_q_table.txt  4_state_table.txt  4_t_table.txt  4initmap.txt  8_q_table.txt  8_state_table.txt  8_t_table.txt  8initmap.txt  formStiffness2D.m  main.ipynb  main.py  solution.m  stressRecovery.m
backend/app/models/code/8_state_num_table/: 8_q_table.txt  8_state_num_table.txt  8_t_table.txt
backend/app/models/comp2field-master-main/: checkpoint_link.txt  test.py
backend/app/models/comp_code/: 8_q_table.txt  8_state_table.txt  8_t_table.txt  8best.txt  8initmap.txt  drawingMesh.m  main.ipynb  main.py  test.m
backend/app/models/comp_code/.ipynb_checkpoints/: main-checkpoint.ipynb
backend/app/models/comp_code/gym-mapHR_v1/: setup.py
backend/app/models/comp_code/gym-mapHR_v1/gym_mapHR_v1/: __init__.py
backend/app/models/comp_code/gym-mapHR_v1/gym_mapHR_v1/envs/: mapHR_v1_Env.py
backend/app/models/comp_code/gym-mapHR_v1/mapHR_v1.egg-info/: PKG-INFO
backend/app/models/gym-mapHR_v1/gym_mapHR_v1/envs/: __init__.py
backend/app/models/gym-mapHR_v1/mapHR_v1.egg-info/: SOURCES.txt
backend/app/utils/: utils.py
backend/model1/: plastic_data.csv
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.tsx  App2.tsx  api.ts
frontend/src/components/: CNNNumber.tsx  COMP.tsx  COMPGrid.tsx  Calculator.tsx  DDPG.tsx  Home.tsx  (+3 more)
