[tool.poetry]
name = "rl-demo-web"
version = "0.1.0"
description = ""
authors = ["momonong <morrischen2.9@gmail.com>"]
readme = "README.md"
packages = [{include = "rl_demo_web"}]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = {extras = ["all"], version = "^0.100.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
